@@ -12,7 +12,8 @@ fast networks, and added a tcp-send-buffer configuration option to control the
 SO_SNDBUF socket parameter. Fixed a couple of memory leaks; thanks to Richard
 Fuchs and Daniel Tiefnig from Inode for identifying those and supplying a
 patch. The same authors also supplied code to enable recursion into subfolders
-of a maildir mailbox (maildir-recursion config option).
+of a maildir mailbox (maildir-recursion config option). Added support for SHA1
+passwords, and fixed a bug in the MD5 base64 password code.
 
 1.5.3
 
